--- a/rag-server/config/mcp-config.example.json
+++ b/rag-server/config/mcp-config.example.json
@@ -1,4 +1,5 @@
 {
+  "project_root": "..",
   "cloud_qdrant": {
     "url": "env:QDRANT_CLOUD_URL",
     "api_key": "env:QDRANT_API_KEY",
@@ -7,7 +8,7 @@
     "retry_attempts": 3
   },
   "local_qdrant": {
-    "path": "./rag-server/qdrant_data",
+    "path": "./qdrant_data",
     "collection": "my-project-local",
     "recreate_if_exists": false
   },
