--- a/rag-server/config/mcp-config.example.json
+++ b/rag-server/config/mcp-config.example.json
@@ -1,8 +1,8 @@
 {
   "project_root": "..",
   "cloud_qdrant": {
-    "url": "env:QDRANT_CLOUD_URL",
-    "api_key": "env:QDRANT_API_KEY",
+    "url": "https://your-cluster.qdrant.io:6333",
+    "api_key": "your-api-key-here",
     "collection": "my-project-core",
     "timeout": 30,
     "retry_attempts": 3
