Fix delete_all tool implementation and clean up temporary test files
- Fixed delete_all tool: Changed from unsupported {'all': True} to scroll + batch delete by IDs
- Fixed vector_id handling: Convert all vector_id fields to strings in JSON responses to prevent JavaScript precision loss
- Fixed update_vector: Allow metadata-only updates without requiring content/vector
- Fixed ID generation: Use deterministic hashing with PYTHONHASHSEED=0
- Enhanced metadata indexing: Auto-index common fields (category, error_type, tags, source)
- Added Python-side filtering fallback for unindexed metadata fields
- Removed 15 temporary test files and documentation files
- All 8 MCP tools now fully functional and tested

--- a/rag-server/config/mcp-config.example.json
+++ b/rag-server/config/mcp-config.example.json
@@ -3,7 +3,8 @@
   "local_qdrant": {
     "path": "./qdrant_data",
     "collection": "my-project-local",
-    "recreate_if_exists": false
+    "recreate_if_exists": false,
+    "enabled": false
   },
   "cloud_docs": [
     "docs/**/*.md",
